[gd_scene load_steps=2 format=3 uid="uid://bdy48sow6vqft"]

[ext_resource type="Script" path="res://main.gd" id="1"]

[node name="TextSelection" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -82.0
offset_top = -129.0
offset_right = 82.0
offset_bottom = 129.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="Title" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Qrcode generator"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="Explanations" type="Label" parent="CenterContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Write your text"
horizontal_alignment = 1

[node name="InputValue" type="LineEdit" parent="CenterContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="Explanations" type="Label" parent="CenterContainer/VBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "Error correction level"
horizontal_alignment = 1

[node name="ErrorCorrection" type="OptionButton" parent="CenterContainer/VBoxContainer/VBoxContainer2"]
layout_mode = 2
flat = true

[node name="ValidateButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Submit"

[connection signal="pressed" from="CenterContainer/VBoxContainer/ValidateButton" to="." method="_on_ValidateButton_pressed"]
